--- a/main.kv
+++ b/main.kv
@@ -6,7 +6,7 @@
 
 <LoadingScreen>:
     name:"LoadingScreen"
-    MDBoxLayout:
+    BoxLayout:
         orientation: 'vertical'
         padding:30
         spacing:10
