working on android finally

--- a/main.kv
+++ b/main.kv
@@ -29,10 +29,10 @@
                 text:"Get Latest Info"
                 pos_hint: {"center_x": .5, "center_y": .5}
                 on_release:
-                    root.calltwo()
+                    root.loadscreen()
                 theme_text_color: "Custom"
                 text_color: 1,1,1,1
-
+            
 <MainScreen>:
     name:"MainScreen"
     ti:infected
